[tool.poetry]
name = "fynesse"
version = "0.1.0"
description = "Template files for performing fynesse pipeline data analysis with python."
authors = ["Firstname Lastname <emal@domain.here>"]
maintainers = ["Firstname Lastname <emal@domain.here>"]
readme = "README.md"
license = "MIT"
keywords = ["data-science", "analysis", "framework", "access", "assess", "address"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "fynesse"}]
include = ["fynesse/defaults.yml"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
PyYAML = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
types-pyyaml = "^6.0.12.20250822"

[tool.poetry.group.interactive.dependencies]
bokeh = "^3.0.0"

[tool.poetry.urls]
Homepage = "https://github.com/lawrennd/fynesse_template"
Repository = "https://github.com/lawrennd/fynesse_template"
Documentation = "https://github.com/lawrennd/fynesse_template#readme"
Issues = "https://github.com/lawrennd/fynesse_template/issues"

[tool.pytest.ini_options]
testpaths = ["fynesse/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=fynesse",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["fynesse"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "jupyter.*",
    "bokeh.*",
]
ignore_missing_imports = true
import pandas as pd
import matplotlib.pyplot as plt


def interpret_clusters(clustered_data, cluster_col="cluster"):
    """
    Summarize cluster profiles and print key findings.
    """
    if cluster_col not in clustered_data.columns:
        raise ValueError(f"{cluster_col} not found in dataframe")

    summary = clustered_data.groupby(cluster_col).mean(numeric_only=True)
    print("Cluster Profiles (averages of indicators):\n")
    print(summary)
    return summary


def policy_recommendations(results):
    """
    Generate a set of policy recommendations based on regression or summary results.
    """
    recs = []

    if results.get("rural_population", 0) > 0.5:
        recs.append("Invest in rural school infrastructure and digital inclusion.")

    if results.get("poverty_rate", 0) > 0.4:
        recs.append("Implement conditional cash transfers for girls' education.")

    if results.get("internet_penetration", 0) < 0.3:
        recs.append("Expand internet connectivity programs in underserved areas.")

    if results.get("teacher_female_ratio", 0) < 0.3:
        recs.append("Recruit and support more female teachers to encourage girls’ enrolment.")

    if not recs:
        recs.append("Maintain current policies but monitor gender gaps regularly.")

    return recs


def plot_gender_gap_trends(master_filled, gap_col="gender_gap_secondary_enrolment", group_by_region=False):
    """
    Plot temporal trends of gender gaps for multiple countries or regions.
    """
    if gap_col not in master_filled.columns:
        raise ValueError(f"{gap_col} not found in dataframe")

    plt.figure(figsize=(12, 6))

    if group_by_region and "region" in master_filled.columns:
        for region in master_filled["region"].unique():
            data = master_filled[master_filled["region"] == region]
            avg_data = data.groupby("year")[gap_col].mean()
            plt.plot(avg_data.index, avg_data.values, label=region, linewidth=2)
    else:
        for country in master_filled["country"].unique():
            data = master_filled[master_filled["country"] == country]
            plt.plot(data["year"], data[gap_col] / 1000, label=country, alpha=0.4)

    plt.title(f"{gap_col.replace('_', ' ').title()} Over Time")
    plt.xlabel("Year")
    plt.ylabel("Gender Gap (Female - Male, scaled)")
    plt.legend(bbox_to_anchor=(1.05, 1), loc="upper left", fontsize="x-small", ncol=2)
    plt.tight_layout()
    plt.show()

